# synthtiger

./: MANIFEST.in  pyproject.toml
synthtiger/: __init__.py  gen.py  main.py
synthtiger/components/: component.py
synthtiger/components/transform/: pad.py
